# pygpgme

./: .bzrignore  .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  NEWS  README  README.md  pyproject.toml  setup.py  test_all.py
.github/workflows/: deploy.yaml  test.yaml
docs/source/: api.rst  conf.py  cookbook.rst
examples/: encrypt.py
gpgme/: __init__.py  editutil.py
gpgme/tests/: __init__.py  test_context.py  test_delete.py  test_editkey.py  test_encrypt_decrypt.py  test_export.py  test_genkey.py  test_import.py  test_keylist.py  test_keys.py  test_passphrase.py  test_progress.py  test_sign_verify.py  util.py
lib/: gpgme.c  pygpgme-constants.c  pygpgme-context.c  pygpgme-data.c  pygpgme-engine-info.c  pygpgme-error.c  pygpgme-genkey.c  pygpgme-import.c  pygpgme-key.c  pygpgme-keyiter.c  pygpgme-signature.c  pygpgme.h
src/: gpgme.c  pycompat.h  pygpgme-constants.c  pygpgme-context.c  pygpgme-data.c  pygpgme-error.c  pygpgme-genkey.c  pygpgme-import.c  pygpgme-key.c  pygpgme-keyiter.c  pygpgme-signature.c  pygpgme.h
src/gpgme/: __init__.py  _gpgme.pyi  editutil.py
tests/: test_context.py  test_delete.py  test_editkey.py  test_encrypt_decrypt.py  test_export.py  test_genkey.py  test_import.py  test_keylist.py  test_keys.py  test_passphrase.py  test_progress.py  test_sign_verify.py  util.py
